--- a/assignmnet/assignment9.html
+++ b/assignmnet/assignment9.html
@@ -22,7 +22,7 @@
     <main class="player-screen">
         <div class="player-component">
             <div class="player-component__display">
-                <div class="player-component__cover"><i class="far fa-image"></i></div>
+                <div class="player-component__cover"><i class="fas fa-images"></i></div>
                 <div class="player-component__text">
                     <h4 class="player-component__title">Random Love</h4>
                     <h5 class="player-component__subtitle">by Divay Kapoor</h5>
@@ -55,7 +55,7 @@
                 <div class="playlist-component__cover cover_color-blue"></div>
                 <div class="playlist-component__text">
                     <h5 class="playlist-component__title-musictitle">Try Everthing</h5>
-                    <h6 class="playlist-component__subtitle-singer">Shakira · Zootopiz</h6>
+                    <h6 class="playlist-component__subtitle-singer">Shakira · Zootopia</h6>
                 </div>
             </li>
             <li class="playlist-component__list">
