--- a/assignmnet/assignment10.html
+++ b/assignmnet/assignment10.html
@@ -14,10 +14,10 @@
             <span>library</span>
             <i class="fas fa-shopping-bag"></i>
         </div>
-        <div class="search-bar">
-            <p>Search books...</p>
+        <form class="search-bar">
+            <input type="text" placeholder="Search books...." />
             <i class="fas fa-search"></i>
-        </div>
+        </form>
     </header>
   
 
