--- a/assignmnet/assignment11.html
+++ b/assignmnet/assignment11.html
@@ -35,6 +35,7 @@
             </div>
         </div>
 
+        <div class="playlist-sticky">
         <ul class="player-musiclist">
             <li class="player-musiclist__column">
                 <div class="player-musiclist__img">
@@ -85,6 +86,18 @@
                     <i class="fas fa-ellipsis-v fa-xl"></i>
                 </div>
             </li>
+            <li class="player-musiclist__column">
+                <div class="player-musiclist__img">
+                <img src="https://upload.wikimedia.org/wikipedia/en/c/c3/Alan_Walker_The_Spectre.jpg" />
+                </div>
+                <div class="player-musiclist__text">
+                    <h6 class="player-musiclist__title-singer">Alan Walker</h6>
+                    <h5 class="player-musiclist__subtitle-song">the spectre </h5>
+                </div>
+                <div class="player-musiclist__more-icon">
+                    <i class="fas fa-ellipsis-v fa-xl"></i>
+                </div>
+            </li>
         </ul>
 
         <div class="player-controlbox">
@@ -97,6 +110,7 @@
                 <span class="player-controlbox__icon"><i class="fas fa-pause"></i></span>
                 <span class="player-controlbox__icon"><i class="fas fa-step-forward"></i></span>
             </div>
+        </div>
         </div>
     </div>
 
