--- a/example4/index.html
+++ b/example4/index.html
@@ -9,19 +9,20 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Mali:wght@300;400;600;700&display=swap" rel="stylesheet">
     <title>Document</title>
+   
 </head>
 <body>
     <nav class="nav-bar">
         <div class="nav-bar__logo">
             <i class="fas fa-sun"></i>
             <a href="#">Leecode Blog</a>
-        </div>
+        </div> 
         <ul class="nav-bar__menu">
-            <li>home</li>
-            <li>Memo</li>
-            <li>Code</li>
-            <li>Book</li>
-            <li>Movie</li>
+         <li><a href="#">Home</a></li>
+         <li><a href="#">Memo</a></li>
+         <li><a href="#">Code</a></li>
+         <li><a href="#">Book</a></li>
+         <li><a href="#">Movie</a></li>
         </ul>
         <ul class="nav-bar__icons">
             <li>
@@ -31,7 +32,7 @@
                 <i class="fab fa-twitter-square"></i>
             </li>
         </ul>
-        <a href="#" class="nav-bar__tooglebtn">
+        <a href="#" class="nav-bar__toogleBtn">
             <i class="fas fa-bars"></i>
         </a>
     </nav>
@@ -42,6 +43,7 @@
 
     
     <script src="https://kit.fontawesome.com/6478f529f2.js" crossorigin="anonymous"></script>
+    <script src="main.js" defer></script>
 </body>
 </body>
 </html>
