--- a/lifecoding/index.html
+++ b/lifecoding/index.html
@@ -13,6 +13,9 @@
 <body>
     
     <h1><a href="index.html">WEB</a></h1>
+    <div id="player">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/7T7r_oSp0SE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
     
     <input id="night_day" type="button" value="night" onclick="
     nightDayHandler(this);">
@@ -31,6 +34,7 @@
 이 사이트는 HTML연습을 위해 제작된 웹사이트입니다. WEB의 3요소 HTML,CSS,Javacript가 무엇인지 볼 수 있습니다. 
     </p>
 </div>
+
 </div>
 
 
